# x-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/x_mcp/: __init__.py  server.py
