[project]
name = "x-mcp-server"
version = "1.4.0"
description = "MCP server for X (Twitter) API — post, search, like, retweet, follow, and read tweets"
readme = "README.md"
authors = [
    { name = "MindMade", email = "info@mindmade.ai" },
]
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "mcp[cli]>=1.8.0",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
x-mcp = "x_mcp:main"

[project.urls]
Homepage = "https://github.com/MindMadeLab/x-mcp"
Repository = "https://github.com/MindMadeLab/x-mcp"
Issues = "https://github.com/MindMadeLab/x-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/x_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
